WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316314
[Site Isolation] 2x resourceLoadStatistics/exemptDomains* tests are failing
https://bugs.webkit.org/show_bug.cgi?id=316314
Summary
[Site Isolation] 2x resourceLoadStatistics/exemptDomains* tests are failing
rupin
Reported
2026-06-04 09:57:13 PDT
[Site Isolation] 2x resourceLoadStatistics/exemptDomains* tests are failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-06-04 09:57:19 PDT
<
rdar://problem/178737060
>
rupin
Comment 2
2026-06-04 10:30:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66456
EWS
Comment 3
2026-06-05 13:48:07 PDT
Committed
314659@main
(7e6e586f5ec6): <
https://commits.webkit.org/314659@main
> Reviewed commits have been landed. Closing PR #66456 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug